fpp_analysis/src/test/array/format_bad_syntax.ref.txt
 --> [ local path prefix ]/array/format_bad_syntax.fpp:1:27
  |
1 | array A = [3] U32 format "{"
  |                           ^ unmatched `{` in format string
  |
  = note: consider escaping curly brace with `{{`

error: format string missing replacement fields
 --> [ local path prefix ]/array/format_bad_syntax.fpp:1:15
  |
1 | array A = [3] U32 format "{"
  |               --- missing format replacement field

